# train_model

./: pyproject.toml  requirements.txt  setup.py
examples/: custom_model.yml
notebooks/: automatic_model_training.ipynb
